--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html2pdf.js": "^0.12.1",
     "pandas": "^0.0.3",
     "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
