--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "backend:seed": "node backend/server.js --seed-only"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
