--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "html2pdf.js": "^0.12.1",
+    "papaparse": "^5.5.3",
     "pandas": "^0.0.3",
     "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
