--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
