Migrate Express backend to Azure Functions - Complete deployment setup

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,13 +1,17 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/assets/*", "/*.{css,js,json,png,jpg,jpeg,gif,svg,ico,woff,woff2,ttf,eot}"]
+    "exclude": ["/api/*", "/assets/*", "/*.{css,js,json,png,jpg,jpeg,gif,svg,ico,woff,woff2,ttf,eot}"]
   },
   "mimeTypes": {
     ".json": "application/json",
     ".csv": "text/csv"
   },
   "routes": [
+    {
+      "route": "/api/*",
+      "allowedRoles": ["anonymous"]
+    },
     {
       "route": "/*",
       "serve": "/index.html",
