--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "backend:start": "node backend/server.js",
-    "backend:seed": "node backend/server.js --seed-only"
+    "backend:seed": "node backend/server.js --seed-only",
+    "start": "node backend/server.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
@@ -17,6 +18,7 @@
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "html2pdf.js": "^0.12.1",
+    "mssql": "^12.2.0",
     "pandas": "^0.0.3",
     "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
