--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html2pdf.js": "^0.12.1",
     "mssql": "^12.2.0",
     "pandas": "^0.0.3",
+    "papaparse": "^5.5.3",
     "pdf-parse": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
