--- a/.github/workflows/main_medai-backend.yml
+++ b/.github/workflows/main_medai-backend.yml
@@ -1,5 +1,6 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# Deploy backend (Express) to Azure App Service.
+# Needs GitHub Secrets: AZURE_WEBAPP_NAME, AZURE_CLIENT_ID, AZURE_TENANT_ID, AZURE_SUBSCRIPTION_ID, AZURE_CLIENT_SECRET.
+# See DEPLOY.md section "Dacă Get publish profile nu merge" for how to create the App Registration.
 
 name: Build and deploy Node.js app to Azure Web App - medai-backend
 
@@ -40,6 +41,7 @@ jobs:
     needs: build
     permissions:
       contents: read
+      id-token: write
 
     steps:
       - name: Download artifact from build job
@@ -47,10 +49,17 @@ jobs:
         with:
           name: node-app
 
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
           
